--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   },
   "editor.formatOnSave": true,
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact", "vue"],
-  "files.autoSave": "onFocusChange"
+  "files.autoSave": "onFocusChange",
+  "commentTranslate.hover.enabled": true
 }
