--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-node_modules
 dist
 out
-.DS_Store
+# 忽略 Node.js 项目的依赖目录
+node_modules/
+# 忽略日志文件
 *.log*
+# 忽略 MacOS 生成的 `.DS_Store` 文件
+.DS_Store
+# 忽略 Python 编译生成的字节码文件
+*.pyc
